# docs/swagger.yml
@@ -6,12 +6,6 @@ servers:
   - url: http://localhost:3000/
 
 paths:
-  /:
-    get:
-      summary: TEST
-      responses:
-        200:
-          description: test gick bra
   /api/notes:
     get:
       summary: Hämta anteckningar
@@ -30,7 +24,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Note'
         '400':
-          description: Felaktig förfrågan
+          description: Bad Request
         '401':
           description: Unauthorized
         '403':
@@ -57,7 +51,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Note'
         '400':
-          description: Felaktig förfrågan
+          description: Bad Request
 
   /api/notes/{id}:
     put:
@@ -88,9 +82,9 @@ paths:
               schema:
                 $ref: '#/components/schemas/Note'
         '400':
-          description: Felaktig förfrågan
+          description: Bad Request
         '404':
-          description: Anteckning hittades inte
+          description: Not Found
 
     delete:
       summary: Ta bort en anteckning
@@ -115,6 +109,8 @@ paths:
   /api/notes/search/{searchString}:
     get:
       summary: Söka bland anteckningar
+      tags:
+        - notes
       description: Söker bland användarens anteckningar baserat på titel. Kräver giltig JWT-token.
       parameters:
         - in: path
@@ -135,7 +131,7 @@ paths:
                 items:
                   $ref: '#/components/schemas/Note'
         '400':
-          description: Felaktig förfrågan
+          description: Bad Request
 
   /api/user/signup:
     post:
@@ -158,7 +154,7 @@ paths:
         '200':
           description: Användarkonto skapat framgångsrikt
         '400':
-          description: Felaktig förfrågan
+          description: Bad Request
 
   /api/user/login:
     post:
@@ -188,7 +184,7 @@ paths:
                   jwt:
                     type: string
         '400':
-          description: Felaktig förfrågan
+          description: Bad Request
 
 components:
   schemas:
@@ -199,6 +195,8 @@ components:
 
       properties:
         id:
+          type: string
+        createdBy:
           type: string
         createdAt:
           type: string
